--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-portfolio",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "homepage": "https://github.io/rutadeline/my-portfolio",
   "scripts": {
@@ -17,8 +16,9 @@
   "bugs": {
     "url": "https://github.com/rutadeline/my-portfolio/issues"
   },
-  
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  }
+  },
+  "dependencies": {},
+  "description": ""
 }
